--- a/page-articles.hbs
+++ b/page-articles.hbs
@@ -7,7 +7,7 @@
         {{/post}}
 
         <div class="post-feed text-only container medium">
-            {{#get "posts" filter="tags:article"}}
+            {{#get "posts" limit="all" filter="tags:article"}}
             {{#foreach posts}}
             {{> "loop"}}
             {{/foreach}}
