--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,4 @@
-@import "@tryghost/shared-theme-assets/assets/css/v1/screen.css";
+@import "@tryghost/shared-theme-assets/assets/css/screen.css";
 @import "general/fonts.css";
 @import "general/basics.css";
 @import "general/button.css";
@@ -15,6 +15,7 @@
 @import "blog/share.css";
 @import "blog/navigation.css";
 @import "blog/related.css";
+@import "blog/comment.css";
 @import "blog/taxonomy.css";
 @import "misc/tiny-slider.css";
 @import "misc/utils.css";
