--- a/custom-narrow-feature-image.hbs
+++ b/custom-narrow-feature-image.hbs
@@ -7,13 +7,10 @@
     {{/post}}
 
     {{#is "post"}}
+        {{> "comment"}}
         {{#if @custom.show_related_posts}}
             {{> "related-posts"}}
         {{/if}}
-
-        {{#post}}
-            {{> "comments"}}
-        {{/post}}
     {{/is}}
 
 </main>
