--- a/post.hbs
+++ b/post.hbs
@@ -6,12 +6,11 @@
         {{> "content" width="wide"}}
     {{/post}}
 
-    {{#if @custom.show_related_posts}}
-        {{> "related-posts"}}
-    {{/if}}
-
-    {{#post}}
-        {{> "comments"}}
-    {{/post}}
+    {{#is "post"}}
+        {{> "comment"}}
+        {{#if @custom.show_related_posts}}
+            {{> "related-posts"}}
+        {{/if}}
+    {{/is}}
 
 </main>
