--- a/partials/comment.hbs
+++ b/partials/comment.hbs
@@ -1,9 +1,9 @@
-{{!-- {{#post}}
+{{!--
+{{#post}}
     {{#if access}}
-    <div class="gh-canvas">
-        <div class="comment">
+        <div class="comment container small">
             If you want to embed comments, this is a good place to do it!
         </div>
-    </div>
     {{/if}}
-{{/post}} --}}
+{{/post}}
+--}}
