--- a/assets/css/blog/pagination.css
+++ b/assets/css/blog/pagination.css
@@ -1,5 +1,27 @@
-.load-more {
+.pagination,
+body:not(.paged-next) .infinite-scroll-button {
+    display: none;
+}
+
+.infinite-scroll-action {
     display: flex;
     justify-content: center;
-    margin-top: 32px;
+}
+
+.infinite-scroll-button {
+    margin-top: 3rem;
+    min-width: 110px;
+}
+
+.infinite-scroll-button .loader {
+    display: none;
+    line-height: 0;
+}
+
+.infinite-scroll-button.loading .label {
+    display: none;
+}
+
+.infinite-scroll-button.loading .loader {
+    display: inline;
 }
