--- a/assets/css/blog/related.css
+++ b/assets/css/blog/related.css
@@ -1,14 +1,10 @@
 .related-wrapper {
-    padding: 56px 0 32px;
-    margin-top: 80px;
+    margin-top: 6rem;
+    padding: 4.5rem 0 3rem;
     background-color: var(--lighter-gray-color);
 }
 
 .related-title {
-    margin-bottom: 20px;
-    font-size: 2.1rem;
-}
-
-.related-wrapper .post-feed {
-    margin-top: 0;
+    margin-bottom: 3rem;
+    font-size: 1.9rem;
 }
