--- a/assets/css/blog/featured.css
+++ b/assets/css/blog/featured.css
@@ -1,6 +1,6 @@
 .featured-wrapper {
-    margin-top: 3rem;
     padding-top: 6vmin;
+    margin-top: 3rem;
 }
 
 .featured-wrapper .post {
@@ -15,6 +15,8 @@
     margin-bottom: 0;
     font-size: 1.8rem;
     font-weight: 700;
+    line-height: 1.25;
+    letter-spacing: -0.005em;
 }
 
 .has-serif-title .featured-wrapper .post-title {
@@ -22,12 +24,12 @@
 }
 
 .featured-title {
-    margin-bottom: 4.5rem;
     padding-bottom: 1rem;
-    border-bottom: 1px solid var(--light-gray-color);
+    margin-bottom: 4.5rem;
     font-size: 1.5rem;
-    letter-spacing: 0.05rem;
     text-transform: uppercase;
+    letter-spacing: 0.05rem;
+    border-bottom: 1px solid var(--light-gray-color);
 }
 
 .featured-feed {
