--- a/assets/css/site/footer.css
+++ b/assets/css/site/footer.css
@@ -48,12 +48,13 @@
 }
 
 .social {
+    color: var(--white-color);
     display: flex;
     align-items: center;
 }
 
 .social-item {
-    color: var(--secondary-text-color);
+    color: var(--white-color);
     line-height: 0;
 }
 
