--- a/default.hbs
+++ b/default.hbs
@@ -6,43 +6,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{meta_title}}</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;0,800;1,400;1,700&family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap">
-
     <link rel="stylesheet" href="{{asset "built/screen.css"}}">
 
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}}{{{block "body_class"}}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
-    <div class="site">
-        {{> header}}
+<body class="{{body_class}}{{{block "body_class"}}} is-head-{{#match @custom.navigation_layout "Logo on the left"}}left-logo{{else match @custom.navigation_layout "Logo in the middle"}}middle-logo{{else}}stacked{{/match}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}{{^is "home"}}{{#if @site.cover_image}} is-head-brand{{/if}}{{/is}}">
+<div class="site">
 
-        {{#is "home"}}
-            {{> cover}}
-            {{#if @custom.show_featured_posts}}
-                {{> featured}}
-            {{/if}}
-        {{/is}}
+    <header id="gh-head" class="gh-head gh-outer">
+        <div class="gh-head-inner">
+            <div class="gh-head-brand">
+                <div class="gh-head-brand-wrapper">
+                    <a class="gh-head-logo" href="{{@site.url}}">
+                        {{#if @site.logo}}
+                            <img src="{{@site.logo}}" alt="{{@site.title}}">
+                        {{else}}
+                            {{@site.title}}
+                        {{/if}}
+                    </a>
+                </div>
+                <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                <button class="gh-burger"></button>
+            </div>
 
-        <div class="site-content">
-            {{{body}}}
+            <nav class="gh-head-menu">
+                {{navigation}}
+                {{#unless @site.members_enabled}}
+                    {{#match @custom.navigation_layout "Stacked"}}
+                        <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                    {{/match}}
+                {{/unless}}
+            </nav>
+
+            <div class="gh-head-actions">
+                {{#unless @site.members_enabled}}
+                    {{^match @custom.navigation_layout "Stacked"}}
+                        <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                    {{/match}}
+                {{else}}
+                    <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                    <div class="gh-head-members">
+                        <div class="social">
+                            {{#if @site.facebook}}
+                                <a class="social-item social-item-facebook"
+                                    href="{{facebook_url @site.facebook}}" target="_blank"
+                                    rel="noopener noreferrer" aria-label="Facebook">
+                                    {{> icons/facebook}}
+                                </a>
+                            {{/if}}
+
+                            {{#if @site.twitter}}
+                                <a class="social-item social-item-twitter"
+                                    href="{{twitter_url @site.twitter}}" target="_blank"
+                                    rel="noopener noreferrer" aria-label="Twitter">
+                                    {{> icons/twitter}}
+                                </a>
+                            {{/if}}
+
+                            {{#if @custom.instagram_url}}
+                                <a class="social-item social-item-instagram"
+                                    href="{{@custom.instagram_url}}" target="_blank"
+                                    rel="noopener noreferrer" aria-label="Instagram">
+                                    {{> icons/instagram}}
+                                </a>
+                            {{/if}}
+                        </div>
+                        {{#unless @member}}
+                            {{#unless @site.members_invite_only}}
+                                <a class="gh-head-link" href="#/portal/signin" data-portal="signin">Sign in</a>
+                            {{else}}
+                                <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/signin" data-portal="signin">Sign in</a>
+                            {{/unless}}
+                        {{else}}
+                            <a class="gh-head-btn gh-btn gh-primary-btn" href="#/portal/account" data-portal="account">Account</a>
+                        {{/unless}}
+                    </div>
+                {{/unless}}
+            </div>
         </div>
+    </header>
 
-        {{> footer}}
-        {{> pswp}}
+    {{#is "home"}}
+        {{> "cover"}}
+        {{#if @custom.show_featured_posts}}
+            {{> "featured-posts"}}
+        {{/if}}
+    {{/is}}
+
+    <div class="site-content">
+        {{{body}}}
     </div>
 
-    {{!-- Fixes 100vh issue on mobile browsers with toolbar on the bottom --}}
-    <script>
-        if (document.body.classList.contains('with-full-cover') && (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.platform))) {
-            document.getElementsByClassName('cover')[0].style.height = window.innerHeight + 'px';
-        }
-    </script>
+    <footer class="gh-foot gh-outer">
+        <div class="gh-foot-inner gh-inner">
+            <div class="gh-copyright">
+                {{@site.title}} © {{date format="YYYY"}}
+            </div>
+            <nav class="gh-foot-menu">
+                {{navigation type="secondary"}}
+            </nav>
+            {{#if @custom.show_share_links}}
+            <div class="social">
+                {{#if @site.facebook}}
+                    <a class="social-item social-item-facebook"
+                        href="{{facebook_url @site.facebook}}" target="_blank"
+                        rel="noopener noreferrer" aria-label="Facebook">
+                        {{> icons/facebook}}
+                    </a>
+                {{/if}}
 
-    <script src="{{asset "built/main.min.js"}}"></script>
+                {{#if @site.twitter}}
+                    <a class="social-item social-item-twitter"
+                        href="{{twitter_url @site.twitter}}" target="_blank"
+                        rel="noopener noreferrer" aria-label="Twitter">
+                        {{> icons/twitter}}
+                    </a>
+                {{/if}}
 
-    {{ghost_foot}}
+                {{#if @custom.instagram_url}}
+                    <a class="social-item social-item-instagram"
+                        href="{{@custom.instagram_url}}" target="_blank"
+                        rel="noopener noreferrer" aria-label="Instagram">
+                        {{> icons/instagram}}
+                    </a>
+                {{/if}}
+            </div>
+        {{/if}}
+        </div>
+    </footer>
+
+</div>
+
+{{#is "post, page"}}
+    {{> "pswp"}}
+{{/is}}
+
+{{!-- Fixes 100vh issue on mobile browsers with toolbar on the bottom --}}
+<script>
+    if (document.body.classList.contains('with-full-cover') && (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.platform))) {
+        document.getElementsByClassName('cover')[0].style.height = window.innerHeight + 'px';
+    }
+</script>
+
+<script src="{{asset "built/main.min.js"}}"></script>
+
+{{ghost_foot}}
+
 </body>
 
 </html>
