--- a/partials/content-footer.hbs
+++ b/partials/content-footer.hbs
@@ -44,6 +44,13 @@
                         {{> icons/twitter}}
                         Tweet
                     </a>
+                    {{#if @custom.instagram_url}}
+                    <a class="social-item social-item-instagram"
+                        href="{{@custom.instagram_url}}" target="_blank"
+                        rel="noopener noreferrer" aria-label="Instagram">
+                        {{> icons/instagram}}
+                    </a>
+                    {{/if}}
                 </div>
             </div>
         {{/if}}
