--- a/partials/cover.hbs
+++ b/partials/cover.hbs
@@ -1,9 +1,9 @@
-<div class="cover{{#if @site.cover_image}} image-loading{{/if}}{{#match @custom.publication_cover_style "Half screen"}} half{{/match}}">
+<div class="cover{{#if @site.cover_image}} image-loading{{/if}}{{#match @custom.publication_cover_style "Half screen"}} half{{/match}} gh-outer">
     {{#if @site.cover_image}}
         <img class="cover-image u-object-fit" src="{{@site.cover_image}}" alt="{{@site.title}}">
     {{/if}}
 
-    <div class="cover-content container">
+    <div class="cover-content">
         {{#if @site.description}}
             <div class="cover-description">
                 {{#if @custom.email_signup_text}}
