--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -7,21 +7,24 @@
             {{date published_at format="DD"}}
         </div>
     </div>
+
     {{#match @custom.feed_layout "!=" "Text-only"}}
-        {{#match @custom.feed_layout "!=" "Minimal"}}
-            <div class="feed-image u-placeholder rectangle">
-                {{#if feature_image}}
-                    <img class="u-object-fit"
-                        srcset="{{> srcset}}"
-                        sizes="(min-width: 576px) 160px, 90vw"
-                        src="{{img_url feature_image size="m"}}"
-                        alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
-                        loading="lazy"
-                    >
-                {{/if}}
-            </div>
-        {{/match}}
+    {{#match @custom.feed_layout "!=" "Minimal"}}
+        <div class="feed-image u-placeholder rectangle">
+            {{#if feature_image}}
+                <img
+                    class="u-object-fit"
+                    srcset="{{> "srcset"}}"
+                    sizes="(min-width: 576px) 160px, 90vw"
+                    src="{{img_url feature_image size="m"}}"
+                    alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+                    loading="lazy"
+                >
+            {{/if}}
+        </div>
     {{/match}}
+    {{/match}}
+
     <div class="feed-wrapper">
         <h2 class="feed-title">{{title}}</h2>
         {{#if excerpt}}
@@ -32,17 +35,22 @@
                 {{date published_at}}
             </time>
             <div class="feed-visibility feed-visibility-{{visibility}}">
-                {{> icons/star}}
+                {{> "icons/star"}}
             </div>
             {{#if reading_time}}
                 <div class="feed-length">
                     {{reading_time}}
                 </div>
             {{/if}}
+            {{#if @site.comments_enabled}}
+                {{comment_count autowrap="div" class="feed-comments"}}
+            {{/if}}
             <div class="feed-icon">
-                {{> icons/chevron-right}}
+                {{> "icons/chevron-right"}}
             </div>
         </div>
     </div>
+
     <a class="u-permalink" href="{{url}}" aria-label="{{title}}"></a>
+
 </article>
