--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,11 +1,3 @@
-<nav class="pagination">
-    {{#if next}}
-        <a class="older-posts" href="{{page_url next}}"></a>
-    {{/if}}
+<nav class="load-more">
+    <button class="button button-secondary gh-loadmore">Load more</button>
 </nav>
-<div class="infinite-scroll-action">
-    <button class="button button-secondary infinite-scroll-button">
-        <span class="label">Load more</span>
-        <span class="loader">{{> icons/loader}}</span>
-    </button>
-</div>
