--- a/post.hbs
+++ b/post.hbs
@@ -1,17 +1,17 @@
 {{!< default}}
 
-<div class="content-area">
-    <main class="site-main">
-        {{#post}}
-            {{> content width="wide"}}
-        {{/post}}
-        {{#is "post"}}
-            {{#if @custom.show_related_posts}}
-                {{> related}}
-            {{/if}}
-            {{> comment}}
-        {{/is}}
-    </main>
-</div>
+<main class="site-main">
 
-{{#contentFor "body_class"}}{{#if @site.cover_image}} with-alt-header{{/if}}{{/contentFor}}
+    {{#post}}
+        {{> "content" width="wide"}}
+    {{/post}}
+
+    {{#if @custom.show_related_posts}}
+        {{> "related-posts"}}
+    {{/if}}
+
+    {{#post}}
+        {{> "comments"}}
+    {{/post}}
+
+</main>
